--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@babel/preset-react": "^7.14.5",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
+    "@nrwl/cli": "^15.9.3",
+    "@nrwl/workspace": "^19.2.2",
     "@nx/cypress": "16.5.5",
     "@nx/eslint-plugin": "16.5.5",
     "@nx/jest": "16.5.5",
