--- a/libs/common-ui/project.json
+++ b/libs/common-ui/project.json
@@ -68,7 +68,7 @@
       }
     },
     "chromatic": {
-        "command": "npx nx build-storybook common-ui && npx chromatic --project-token=$TOKEN_CHROMATIC -d=dist/storybook/common-ui"
+        "command": "npx nx build-storybook common-ui && npx chromatic --project-token=${TOKEN_CHROMATIC} -d=dist/storybook/common-ui"
     }
   }
 }
