--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "@nestjs/event-emitter": "^2.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^10.0.0",
-    "@swc/helpers": "~0.5.0",
-    "axios": "^1.4.0",
+    "@swc/helpers": "0.5.11",
+    "axios": "1.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "clsx": "^2.0.0",
     "dotenv": "^16.4.5",
     "event-source-polyfill": "^1.0.31",
-    "next": "13.4.1",
+    "next": "14.2.3",
     "pg": "^8.11.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
@@ -31,53 +31,53 @@
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nrwl/cli": "^15.9.3",
-    "@nrwl/workspace": "^19.2.2",
-    "@nx/cypress": "16.5.5",
-    "@nx/eslint-plugin": "16.5.5",
-    "@nx/jest": "16.5.5",
-    "@nx/js": "16.5.5",
-    "@nx/linter": "16.5.5",
-    "@nx/nest": "^16.5.5",
-    "@nx/next": "^16.5.5",
-    "@nx/node": "16.5.5",
-    "@nx/react": "16.5.5",
-    "@nx/storybook": "^16.5.5",
-    "@nx/vite": "16.5.5",
-    "@nx/webpack": "16.5.5",
-    "@nx/workspace": "16.5.5",
-    "@storybook/addon-a11y": "^7.1.0",
+    "@nrwl/workspace": "19.2.3",
+    "@nx/cypress": "19.2.3",
+    "@nx/eslint-plugin": "19.2.3",
+    "@nx/jest": "19.2.3",
+    "@nx/js": "19.2.3",
+    "@nx/linter": "19.2.3",
+    "@nx/nest": "19.2.3",
+    "@nx/next": "19.2.3",
+    "@nx/node": "19.2.3",
+    "@nx/react": "19.2.3",
+    "@nx/storybook": "19.2.3",
+    "@nx/vite": "19.2.3",
+    "@nx/webpack": "19.2.3",
+    "@nx/workspace": "19.2.3",
+    "@storybook/addon-a11y": "7.1.0",
     "@storybook/addon-essentials": "7.1.0",
-    "@storybook/addon-interactions": "^7.1.0",
-    "@storybook/addon-links": "^7.1.0",
+    "@storybook/addon-interactions": "7.1.0",
+    "@storybook/addon-links": "7.1.0",
     "@storybook/addon-styling": "^1.3.4",
     "@storybook/core-common": "^7.0.24",
     "@storybook/core-server": "7.1.0",
     "@storybook/nextjs": "7.1.0",
     "@storybook/react-vite": "7.1.0",
-    "@swc/cli": "~0.1.62",
-    "@swc/core": "~1.3.51",
+    "@swc/cli": "0.3.12",
+    "@swc/core": "1.5.7",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "14.0.0",
+    "@testing-library/react": "15.0.6",
     "@testing-library/user-event": "^14.4.3",
     "@types/event-source-polyfill": "^1.0.1",
     "@types/jest": "^29.4.0",
     "@types/jest-axe": "^3.5.5",
-    "@types/node": "18.14.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "@vitejs/plugin-react": "~4.0.0",
+    "@types/node": "18.16.9",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "7.3.0",
+    "@typescript-eslint/parser": "7.3.0",
+    "@vitejs/plugin-react": "4.2.0",
     "@vitest/coverage-c8": "~0.32.0",
-    "@vitest/ui": "~0.32.0",
+    "@vitest/ui": "0.34.7",
     "autoprefixer": "^10.4.14",
     "babel-jest": "^29.4.1",
     "chromatic": "^11.5.3",
     "cypress": "^12.16.0",
-    "eslint": "~8.15.0",
-    "eslint-config-next": "13.4.1",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.3",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-cypress": "2.13.4",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
@@ -87,17 +87,17 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jsdom": "~22.1.0",
-    "nx": "16.5.5",
-    "postcss": "^8.4.27",
+    "nx": "19.2.3",
+    "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "storybook-dark-mode": "^3.0.0",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3",
-    "vite": "~4.3.9",
+    "typescript": "5.4.5",
+    "vite": "^5.0.0",
     "vite-plugin-dts": "~2.3.0",
     "vite-tsconfig-paths": "~4.2.0",
-    "vitest": "~0.32.0"
+    "vitest": "0.34.6"
   }
 }
