--- a/libs/common-ui/project.json
+++ b/libs/common-ui/project.json
@@ -6,11 +6,7 @@
   "tags": [],
   "targets": {
     "lint": {
-      "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["libs/common-ui/**/*.{ts,tsx,js,jsx}"]
-      }
+      "executor": "@nx/eslint:lint"
     },
     "build": {
       "executor": "@nx/vite:build",
@@ -32,14 +28,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/common-ui/jest.config.ts",
-        "passWithNoTests": true
-      },
-      "configurations": {
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
-        }
+        "jestConfig": "libs/common-ui/jest.config.ts"
       }
     },
     "storybook": {
@@ -68,7 +57,7 @@
       }
     },
     "chromatic": {
-        "command": "npx nx build-storybook common-ui && npx chromatic --project-token=chpt_71044d0a60060f1 -d=dist/storybook/common-ui"
+      "command": "npx nx build-storybook common-ui && npx chromatic --project-token=${TOKEN} -d=dist/storybook/common-ui"
     }
   }
 }
