--- a/package.json
+++ b/package.json
@@ -27,16 +27,17 @@
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nrwl/cli": "^15.9.3",
     "@nrwl/workspace": "19.2.3",
     "@nx/cypress": "19.2.3",
+    "@nx/eslint": "19.2.3",
     "@nx/eslint-plugin": "19.2.3",
     "@nx/jest": "19.2.3",
     "@nx/js": "19.2.3",
-    "@nx/linter": "19.2.3",
     "@nx/nest": "19.2.3",
     "@nx/next": "19.2.3",
     "@nx/node": "19.2.3",
@@ -73,7 +74,7 @@
     "autoprefixer": "^10.4.14",
     "babel-jest": "^29.4.1",
     "chromatic": "^11.5.3",
-    "cypress": "^12.16.0",
+    "cypress": "^13.6.6",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "9.0.0",
