--- a/libs/common-ui/project.json
+++ b/libs/common-ui/project.json
@@ -57,7 +57,7 @@
       }
     },
     "chromatic": {
-      "command": "npx nx build-storybook common-ui && npx chromatic --project-token=${TOKEN} -d=dist/storybook/common-ui"
+      "command": "npx nx build-storybook common-ui && npx chromatic --project-token=${CHROMATIC_TOKEN} -d=dist/storybook/common-ui"
     }
   }
 }
