--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pg": "^8.11.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-router-dom": "^6.23.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
