feat: Add msw library for mocking API requests in tests

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.0.0",
     "dotenv": "^16.4.5",
     "event-source-polyfill": "^1.0.31",
+    "msw": "^2.3.1",
     "next": "14.2.3",
     "pg": "^8.11.1",
     "react": "18.3.1",
