--- a/apps/frontend/project.json
+++ b/apps/frontend/project.json
@@ -94,6 +94,9 @@
           "quiet": true
         }
       }
+    },
+    "msw-update": {
+      "command": "npx msw init public --no-save"
     }
   }
 }
