--- a/libs/common-ui/project.json
+++ b/libs/common-ui/project.json
@@ -28,7 +28,9 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/common-ui/jest.config.ts"
+        "jestConfig": "libs/common-ui/jest.config.ts",
+        "passWithNoTests": true,
+        "watch": true
       }
     },
     "storybook": {
