--- a/libs/common-ui/project.json
+++ b/libs/common-ui/project.json
@@ -28,9 +28,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/common-ui/jest.config.ts",
-        "passWithNoTests": true,
-        "watch": true
+        "jestConfig": "libs/common-ui/jest.config.ts"
       }
     },
     "storybook": {
