--- a/libs/common-ui/project.json
+++ b/libs/common-ui/project.json
@@ -28,7 +28,8 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/common-ui/jest.config.ts"
+        "jestConfig": "libs/common-ui/jest.config.ts",
+        "passWithNoTests": true
       }
     },
     "storybook": {
@@ -39,7 +40,9 @@
       },
       "configurations": {
         "ci": {
-          "quiet": true
+          "ci": true,
+          "codeCoverage": true,
+          "watch": true
         }
       }
     },
