chore: Update jestConfig in project.json for common-ui library

--- a/libs/common-ui/project.json
+++ b/libs/common-ui/project.json
@@ -41,7 +41,9 @@
       "configurations": {
         "ci": {
           "ci": true,
-          "codeCoverage": true,
+          "codeCoverage": true
+        },
+        "watch": {
           "watch": true
         }
       }
