--- a/libs/common-ui/project.json
+++ b/libs/common-ui/project.json
@@ -29,8 +29,7 @@
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/common-ui/jest.config.ts",
-        "passWithNoTests": true,
-        "watch": true
+        "passWithNoTests": true
       }
     },
     "storybook": {
