chore: Update jestConfig in project.json for common-ui library

--- a/libs/common-ui/project.json
+++ b/libs/common-ui/project.json
@@ -40,6 +40,7 @@
       },
       "configurations": {
         "ci": {
+          "quiet": true,
           "ci": true,
           "codeCoverage": true,
           "watch": false
