--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@typescript-eslint/parser": "7.17.0",
     "@vitejs/plugin-react": "4.3.1",
     "@vitest/coverage-c8": "~0.32.0",
-    "@vitest/ui": "2.0.4",
+    "@vitest/ui": "~0.32.0",
     "autoprefixer": "^10.4.19",
     "babel-jest": "^29.7.0",
     "chromatic": "^11.5.6",
@@ -100,6 +100,6 @@
     "vite": "^5.3.4",
     "vite-plugin-dts": "~3.9.1",
     "vite-tsconfig-paths": "~4.3.2",
-    "vitest": "2.0.4"
+    "vitest": "0.34.6"
   }
 }
