--- a/package.json
+++ b/package.json
@@ -5,35 +5,40 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@nestjs/common": "^10.0.2",
-    "@nestjs/core": "^10.0.2",
-    "@nestjs/event-emitter": "^2.0.2",
-    "@nestjs/platform-express": "^10.0.2",
-    "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/common": "^10.3.10",
+    "@nestjs/core": "^10.3.10",
+    "@nestjs/event-emitter": "^2.0.4",
+    "@nestjs/platform-express": "^10.3.10",
+    "@nestjs/typeorm": "^10.0.2",
     "@swc/helpers": "0.5.12",
-    "axios": "1.6.0",
+    "axios": "1.7.2",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "clsx": "^2.0.0",
+    "class-validator": "^0.14.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "event-source-polyfill": "^1.0.31",
-    "next": "14.2.3",
-    "pg": "^8.11.1",
+    "next": "14.2.5",
+    "pg": "^8.12.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0",
-    "tslib": "^2.3.0",
-    "typeorm": "^0.3.17"
+    "react-router-dom": "^6.25.1",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
+    "tslib": "^2.6.3",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.14.5",
-    "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.2",
+    "@babel/core": "^7.24.9",
+    "@babel/preset-react": "^7.24.7",
+    "@nestjs/schematics": "^10.1.2",
+    "@nestjs/testing": "^10.3.10",
+    "@nrwl/cli": "^15.9.3",
+    "@nrwl/workspace": "19.5.2",
     "@nx/cypress": "19.5.2",
+    "@nx/eslint": "19.5.2",
     "@nx/eslint-plugin": "19.5.2",
     "@nx/jest": "19.5.2",
     "@nx/js": "19.5.2",
-    "@nx/linter": "19.5.2",
     "@nx/nest": "19.5.2",
     "@nx/next": "19.5.2",
     "@nx/node": "19.5.2",
@@ -42,58 +47,59 @@
     "@nx/vite": "19.5.2",
     "@nx/webpack": "19.5.2",
     "@nx/workspace": "19.5.2",
-    "@storybook/addon-a11y": "7.5.1",
-    "@storybook/addon-essentials": "7.5.1",
-    "@storybook/addon-interactions": "7.5.1",
-    "@storybook/addon-links": "7.5.1",
+    "@storybook/addon-a11y": "8.2.5",
+    "@storybook/addon-essentials": "8.2.5",
+    "@storybook/addon-interactions": "8.2.5",
+    "@storybook/addon-links": "8.2.5",
     "@storybook/addon-styling": "^1.3.4",
-    "@storybook/core-common": "^7.0.24",
-    "@storybook/core-server": "7.5.1",
-    "@storybook/nextjs": "7.1.0",
-    "@storybook/react-vite": "7.5.1",
-    "@swc/cli": "0.3.14",
-    "@swc/core": "1.5.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "15.0.6",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/event-source-polyfill": "^1.0.1",
-    "@types/jest": "^29.4.0",
-    "@types/jest-axe": "^3.5.5",
-    "@types/node": "18.16.9",
-    "@types/react": "18.3.1",
+    "@storybook/core-common": "^8.2.5",
+    "@storybook/core-server": "8.2.5",
+    "@storybook/nextjs": "8.2.5",
+    "@storybook/react-vite": "8.2.5",
+    "@swc/cli": "0.4.0",
+    "@swc/core": "1.7.0",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/event-source-polyfill": "^1.0.5",
+    "@types/jest": "^29.5.12",
+    "@types/jest-axe": "^3.5.9",
+    "@types/node": "20.14.12",
+    "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "7.16.0",
-    "@typescript-eslint/parser": "7.16.0",
-    "@vitejs/plugin-react": "4.2.0",
+    "@typescript-eslint/eslint-plugin": "7.17.0",
+    "@typescript-eslint/parser": "7.17.0",
+    "@vitejs/plugin-react": "4.3.1",
     "@vitest/coverage-c8": "~0.32.0",
-    "@vitest/ui": "0.34.7",
-    "autoprefixer": "^10.4.14",
-    "babel-jest": "^29.4.1",
-    "cypress": "^12.16.0",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.3",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-cypress": "2.13.4",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "^29.4.1",
-    "jest-axe": "^8.0.0",
-    "jest-environment-jsdom": "^29.4.1",
-    "jest-environment-node": "^29.4.1",
-    "jsdom": "~22.1.0",
+    "@vitest/ui": "~0.32.0",
+    "autoprefixer": "^10.4.19",
+    "babel-jest": "^29.7.0",
+    "chromatic": "^11.5.6",
+    "cypress": "^13.13.1",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-cypress": "3.3.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsx-a11y": "6.9.0",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "jest": "^29.7.0",
+    "jest-axe": "^9.0.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "jsdom": "~24.1.1",
     "nx": "19.5.2",
-    "postcss": "8.4.38",
-    "prettier": "^2.6.2",
-    "storybook-dark-mode": "^3.0.0",
-    "tailwindcss": "3.4.3",
-    "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
+    "postcss": "8.4.39",
+    "prettier": "^3.3.3",
+    "storybook-dark-mode": "^4.0.2",
+    "tailwindcss": "3.4.6",
+    "ts-jest": "^29.2.3",
+    "ts-node": "10.9.2",
     "typescript": "5.5.4",
-    "vite": "^5.0.0",
-    "vite-plugin-dts": "~2.3.0",
-    "vite-tsconfig-paths": "~4.2.0",
+    "vite": "^5.3.4",
+    "vite-plugin-dts": "~3.9.1",
+    "vite-tsconfig-paths": "~4.3.2",
     "vitest": "0.34.6"
   }
 }
