--- a/package.json
+++ b/package.json
@@ -33,20 +33,20 @@
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nrwl/cli": "^15.9.3",
-    "@nrwl/workspace": "19.2.3",
-    "@nx/cypress": "19.2.3",
-    "@nx/eslint": "19.2.3",
-    "@nx/eslint-plugin": "19.2.3",
-    "@nx/jest": "19.2.3",
-    "@nx/js": "19.2.3",
-    "@nx/nest": "19.2.3",
-    "@nx/next": "19.2.3",
-    "@nx/node": "19.2.3",
-    "@nx/react": "19.2.3",
-    "@nx/storybook": "19.2.3",
-    "@nx/vite": "19.2.3",
-    "@nx/webpack": "19.2.3",
-    "@nx/workspace": "19.2.3",
+    "@nrwl/workspace": "19.5.3",
+    "@nx/cypress": "19.5.3",
+    "@nx/eslint": "19.5.3",
+    "@nx/eslint-plugin": "19.5.3",
+    "@nx/jest": "19.5.3",
+    "@nx/js": "19.5.3",
+    "@nx/nest": "19.5.3",
+    "@nx/next": "19.5.3",
+    "@nx/node": "19.5.3",
+    "@nx/react": "19.5.3",
+    "@nx/storybook": "19.5.3",
+    "@nx/vite": "19.5.3",
+    "@nx/webpack": "19.5.3",
+    "@nx/workspace": "19.5.3",
     "@storybook/addon-a11y": "7.1.0",
     "@storybook/addon-essentials": "7.1.0",
     "@storybook/addon-interactions": "7.1.0",
@@ -67,15 +67,15 @@
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "7.3.0",
-    "@typescript-eslint/parser": "7.3.0",
+    "@typescript-eslint/eslint-plugin": "7.16.0",
+    "@typescript-eslint/parser": "7.16.0",
     "@vitejs/plugin-react": "4.2.0",
     "@vitest/coverage-c8": "~0.32.0",
     "@vitest/ui": "0.34.7",
     "autoprefixer": "^10.4.14",
     "babel-jest": "^29.4.1",
     "chromatic": "^11.5.3",
-    "cypress": "^13.6.6",
+    "cypress": "13.13.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "9.0.0",
@@ -89,14 +89,14 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jsdom": "~22.1.0",
-    "nx": "19.2.3",
+    "nx": "19.5.3",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "storybook-dark-mode": "^3.0.0",
     "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.4.5",
+    "typescript": "5.5.4",
     "vite": "^5.0.0",
     "vite-plugin-dts": "~2.3.0",
     "vite-tsconfig-paths": "~4.2.0",
