--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@storybook/addon-styling": "^1.3.4",
     "@storybook/core-common": "^7.0.24",
     "@storybook/core-server": "7.1.0",
-    "@storybook/nextjs": "7.1.0",
+    "@storybook/nextjs": "^8.2.8",
     "@storybook/react-vite": "7.1.0",
     "@swc/cli": "0.3.12",
     "@swc/core": "1.5.7",
