--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {},
   "private": true,
   "engines": {
-    "node": ">=20.x"
+    "node": "20.x"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.2",
@@ -13,76 +13,74 @@
     "@nestjs/event-emitter": "^2.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^10.0.0",
-    "@swc/helpers": "0.5.11",
-    "axios": "1.6.0",
+    "@swc/helpers": "0.5.3",
+    "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "clsx": "^2.0.0",
-    "dotenv": "^16.4.5",
     "event-source-polyfill": "^1.0.31",
-    "next": "14.2.3",
+    "next": "^14.0.4",
     "pg": "^8.11.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-router-dom": "^6.23.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.17.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nrwl/cli": "^15.9.3",
-    "@nrwl/workspace": "19.5.3",
-    "@nx/cypress": "19.5.3",
-    "@nx/eslint": "19.5.3",
-    "@nx/eslint-plugin": "19.5.3",
-    "@nx/jest": "19.5.3",
-    "@nx/js": "19.5.3",
-    "@nx/nest": "19.5.3",
-    "@nx/next": "19.5.3",
-    "@nx/node": "19.5.3",
-    "@nx/react": "19.5.3",
-    "@nx/storybook": "19.5.3",
-    "@nx/vite": "19.5.3",
-    "@nx/webpack": "19.5.3",
-    "@nx/workspace": "19.5.3",
-    "@storybook/addon-a11y": "7.1.0",
-    "@storybook/addon-essentials": "7.1.0",
-    "@storybook/addon-interactions": "7.1.0",
-    "@storybook/addon-links": "7.1.0",
+    "@nx/cypress": "17.2.6",
+    "@nx/eslint-plugin": "17.2.6",
+    "@nx/jest": "17.2.6",
+    "@nx/js": "17.2.6",
+    "@nx/nest": "17.2.6",
+    "@nx/next": "17.2.6",
+    "@nx/node": "17.2.6",
+    "@nx/react": "17.2.6",
+    "@nx/storybook": "17.2.6",
+    "@nx/vite": "17.2.6",
+    "@nx/webpack": "17.2.6",
+    "@nx/workspace": "17.2.6",
+    "@storybook/addon-a11y": "7.6.6",
+    "@storybook/addon-essentials": "7.6.6",
+    "@storybook/addon-interactions": "7.6.6",
+    "@storybook/addon-links": "7.6.6",
     "@storybook/addon-styling": "^1.3.4",
     "@storybook/core-common": "^7.0.24",
-    "@storybook/core-server": "7.1.0",
-    "@storybook/nextjs": "^8.2.8",
-    "@storybook/react-vite": "7.1.0",
-    "@swc/cli": "0.3.12",
-    "@swc/core": "1.5.7",
+    "@storybook/core-server": "7.6.6",
+    "@storybook/nextjs": "^7.6.6",
+    "@storybook/react-vite": "7.6.6",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "1.3.101",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "15.0.6",
+    "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/event-source-polyfill": "^1.0.1",
     "@types/jest": "^29.4.0",
     "@types/jest-axe": "^3.5.5",
     "@types/node": "18.16.9",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "7.16.0",
-    "@typescript-eslint/parser": "7.16.0",
-    "@vitejs/plugin-react": "4.2.0",
+    "@types/react": "18.2.24",
+    "@types/react-dom": "18.2.9",
+    "@types/uuid": "^9.0.4",
+    "@typescript-eslint/eslint-plugin": "6.15.0",
+    "@typescript-eslint/parser": "6.15.0",
+    "@vitejs/plugin-react": "4.2.1",
     "@vitest/coverage-c8": "~0.32.0",
     "@vitest/ui": "0.34.7",
     "autoprefixer": "^10.4.14",
     "babel-jest": "^29.4.1",
-    "chromatic": "^11.5.3",
-    "cypress": "13.13.0",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.3",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-cypress": "2.13.4",
+    "chromatic": "^7.2.0",
+    "cypress": "^13.0.0",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.1",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-cypress": "2.15.1",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
@@ -92,17 +90,20 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jsdom": "~22.1.0",
-    "nx": "19.5.3",
-    "postcss": "8.4.38",
+    "msw": "^1.3.2",
+    "msw-storybook-addon": "^1.9.0",
+    "nx": "17.2.6",
+    "postcss": "^8.4.27",
     "prettier": "^2.6.2",
     "storybook-dark-mode": "^3.0.0",
-    "tailwindcss": "3.4.3",
+    "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.5.4",
-    "vite": "^5.0.0",
+    "typescript": "5.2.2",
+    "vite": "5.0.10",
     "vite-plugin-dts": "~2.3.0",
     "vite-tsconfig-paths": "~4.2.0",
-    "vitest": "1.3.1"
+    "vitest": "0.34.6",
+    "@nx/eslint": "17.2.6"
   }
 }
