--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -40,8 +40,8 @@
     "**/*.stories.js"
   ],
   "references": [
-    {
-      "path": "./tsconfig.storybook.json"
-    }
+    // {
+    //   "path": "./tsconfig.storybook.json"
+    // }
   ]
 }
