--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -16,10 +16,7 @@
         "name": "next"
       }
     ],
-    "types": [
-      "jest",
-      "node"
-    ]
+    "types": ["jest", "node"]
   },
   "include": [
     "**/*.ts",
@@ -40,8 +37,8 @@
     "**/*.stories.js"
   ],
   "references": [
-    // {
-    //   "path": "./tsconfig.storybook.json"
-    // }
+    {
+      "path": "./tsconfig.storybook.json"
+    }
   ]
 }
