--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.17.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "tailwind-merge": "^2.5.2",
     "tslib": "^2.3.0",
     "typeorm": "^0.3.17",
     "uuid": "^9.0.1"
@@ -36,6 +37,7 @@
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nx/cypress": "17.2.6",
+    "@nx/eslint": "17.2.6",
     "@nx/eslint-plugin": "17.2.6",
     "@nx/jest": "17.2.6",
     "@nx/js": "17.2.6",
@@ -103,7 +105,6 @@
     "vite": "5.0.10",
     "vite-plugin-dts": "~2.3.0",
     "vite-tsconfig-paths": "~4.2.0",
-    "vitest": "0.34.6",
-    "@nx/eslint": "17.2.6"
+    "vitest": "0.34.6"
   }
 }
