--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "tailwind-merge": "^2.5.2",
     "tslib": "^2.3.0",
     "typeorm": "^0.3.17",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
