--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pg": "^8.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.17.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
