--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@nx/vite": "17.2.6",
     "@nx/webpack": "17.2.6",
     "@nx/workspace": "17.2.6",
+    "@prisma/client": "^5.20.0",
     "@storybook/addon-a11y": "7.6.6",
     "@storybook/addon-essentials": "7.6.6",
     "@storybook/addon-interactions": "7.6.6",
@@ -101,6 +102,7 @@
     "nx": "17.2.6",
     "postcss": "^8.4.27",
     "prettier": "^2.6.2",
+    "prisma": "^5.20.0",
     "storybook-dark-mode": "^3.0.0",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.0",
