--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@storybook/core-server": "7.6.6",
     "@storybook/nextjs": "^7.6.6",
     "@storybook/react-vite": "7.6.6",
+    "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
     "@swc/core": "1.3.101",
     "@testing-library/jest-dom": "^5.17.0",
