--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@ems/common-ui": ["libs/common-ui/src/index.ts"]
+      "@ems/common-ui": ["libs/common-ui/src/index.ts"],
+      "@ems/prisma-client": ["libs/prisma-client/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
