--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@ems/common-ui": ["libs/common-ui/src/index.ts"],
-      "@ems/prisma-client": ["libs/prisma-client/src/index.ts"]
+      "@ems/prisma-client": ["libs/prisma-client/src/index.ts"],
+      "@ems/prisma-schema": ["libs/prisma-schema/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
