--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "storybook-dark-mode": "^3.0.0",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.1",
     "typescript": "5.2.2",
     "vite": "5.0.10",
     "vite-plugin-dts": "~2.3.0",
