--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^3.6.0",
     "event-source-polyfill": "^1.0.31",
     "next": "^14.1.0",
+    "openai": "^4.69.0",
     "pg": "^8.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
